<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android1:layout_height="match_parent"
    android1:layout_width="match_parent"
    tools:context=".MainActivity2"
    android1:id="@+id/drawer_layout"
    android1:fitsSystemWindows="true"
    tools:openDrawer="start"
    android1:background="@color/cardview_dark_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android1:id="@+id/layoutCadastro"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content">

        <TextView
            android1:id="@+id/bannerAnnotation"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_marginStart="8dp"
            android1:layout_marginTop="136dp"
            android1:layout_marginEnd="8dp"
            android1:text="@string/bannerRegistro"
            android1:textColor="@color/white"
            android1:textSize="25sp"
            android:layout_constraintEnd_toEndOf="parent"
            android:layout_constraintStart_toStartOf="parent"
            android:layout_constraintTop_toTopOf="parent" />
        <EditText
            android1:id="@+id/nomeAnnotation"
            android1:layout_width="0dp"
            android1:layout_height="wrap_content"
            android1:layout_marginStart="8dp"
            android1:layout_marginTop="8dp"
            android1:layout_marginEnd="8dp"
            android1:ems="10"
            android1:inputType="textPersonName"
            android1:hint="@string/nomeAnotação"
            android:layout_constraintEnd_toEndOf="parent"
            android:layout_constraintStart_toStartOf="parent"
            android:layout_constraintTop_toBottomOf="@+id/bannerAnnotation" />
        <Spinner
            android1:id="@+id/spinnerReminder"
            android1:layout_width="match_parent"
            android1:layout_height="45dp"
            android1:layout_marginStart="8dp"
            android1:layout_marginTop="8dp"
            android1:layout_marginEnd="8dp"
            android1:entries="@array/spinner"
            android:layout_constraintEnd_toEndOf="parent"
            android:layout_constraintStart_toStartOf="parent"
            android:layout_constraintTop_toBottomOf="@+id/nomeAnnotation" />
        <EditText
            android1:id="@+id/editTextTextMultiLine"
            android1:layout_width="0dp"
            android1:layout_height="wrap_content"
            android1:layout_marginStart="8dp"
            android1:layout_marginTop="8dp"
            android1:layout_marginEnd="8dp"
            android1:ems="10"
            android1:gravity="start|top"
            android1:hint="@string/reminder"
            android1:inputType="textMultiLine"
            android:layout_constraintEnd_toEndOf="parent"
            android:layout_constraintStart_toStartOf="parent"
            android:layout_constraintTop_toBottomOf="@+id/spinnerReminder" />
        <Button
            android1:id="@+id/buttonReminder"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_marginEnd="8dp"
            android1:layout_marginBottom="8dp"
            android1:background="@color/gray300"
            android1:text="@string/buttonCreate"
            android:layout_constraintBottom_toBottomOf="parent"
            android:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android1:id="@+id/dateReminder"
            android1:layout_width="100dp"
            android1:layout_height="wrap_content"
            android1:layout_marginStart="8dp"
            android1:layout_marginTop="8dp"
            android1:ems="10"
            android1:hint="@string/dateReminder"
            android1:inputType="date"
            android:layout_constraintStart_toStartOf="parent"
            android:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    </androidx.constraintlayout.widget.ConstraintLayout>

       <include
           layout="@layout/app_bar_main"
           android1:layout_height="match_parent"
           android1:layout_width="match_parent"/>

       <com.google.android.material.navigation.NavigationView
           android1:id="@+id/nav_view"
           android1:layout_width="wrap_content"
           android1:layout_height="match_parent"
           android1:layout_gravity="start"
           android1:fitsSystemWindows="true"
           app:headerLayout="@layout/nav_header_main"
           app:menu="@menu/activity_main_drawer">

       </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>